--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@ body {
   /* Sayfa yüksekliğini tam yapar */
   flex-direction: column;
   /* İçeriklerin alt alta dizilmesi için */
+
+  padding-bottom: 100px;
+
 }
 
 nav ul {
